region-side-post .block fixed margin/padding on mobile

--- a/style/custom.css
+++ b/style/custom.css
@@ -24,6 +24,7 @@ body {
     background-color: #fff;
     padding: 5px;
     border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 
@@ -78,14 +79,15 @@ body {
     border-radius: 4px;
     padding-left: 3px;
     padding-right:3px;
+    padding-top: 3px;
 }
 
 #block-region-side-post .block {
     background-image: linear-gradient(to bottom, #e9e9e9, #d1d1d1);
     border-color: #d1d1d1;
     margin: 4px;
-    margin-top: 9px;
-    margin-bottom: 9px;
+    margin-top: 5px;
+    margin-bottom: 7px;
 }
 
 #block-region-side-post .block .header h2 {
@@ -122,6 +124,7 @@ body {
 #page-footer {
     border: 1px solid #75bee9;
     border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 
